--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -111,20 +111,35 @@
 		private function addItem():void
 		{
 			++count;
-			toc = null;
-//			toc = XMLListCollection(tree.dataProvider);
+			toc = XMLListCollection(tree.dataProvider);
 			
-//			toc.addItem(XML("<page title = 'page " + count+ "' name = 'page_" + count+ "' isBranch='true' />"));
-//			tree.dataProvider = toc;
+			toc.addItem(XML("<page title = 'page " + count+ "' name = 'page_" + count+ "' isBranch='true' />"));
+			tree.dataProvider = null;
+			
+			tree.validateNow();
+			tree.dataProvider = toc;
 	
-			var parentItem : Object = tree.indexToItemRenderer(1).data;
-			
-			var obj : Object = new Object()
-				obj.label = "123";
-					
-			tree.dataDescriptor.addChildAt(parentItem ,obj,0);
 		}
 		
+		private function removeItem():void
+		{
+			if(tree.selectedItem)
+			{
+				if( toc.getItemIndex(tree.selectedItem) == -1)
+				{
+					delete tree.dataProvider.source..page.(@name == tree.selectedItem.@name)[0];
+					toc = XMLListCollection(tree.dataProvider);
+				}
+				else
+				{
+					toc.removeItemAt(toc.getItemIndex(tree.selectedItem));
+
+					tree.dataProvider = null;
+					tree.validateNow();
+					tree.dataProvider = toc;
+				}
+			}	
+		}
 	
 	]]>
 </mx:Script>
@@ -154,12 +169,25 @@
 				change="{treeChangeHandler(event)}"  dragMoveEnabled="true" 	
 				folderOpenIcon="@Embed('../assets/open_folder.png')" folderClosedIcon="@Embed('../assets/close_folder.png')" 
 				defaultLeafIcon="@Embed('../assets/page.png')" /> 
-			<mx:Button  label="Add Item" click="{addItem()}"/>
+			<mx:HBox>
+				<mx:Button  label="Add Item" click="{addItem()}"/>
+				<mx:Button label="Remove Item" click="{removeItem()}" />				
+			</mx:HBox>
 		</mx:VBox>
-		<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0">
-			<mx:Canvas color="#FCFBFB"  width="100%" backgroundColor="#E4E4E4" >
-				
-			</mx:Canvas>
+		<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0"  >
+			
+			<mx:HBox color="#000000"  width="100%" backgroundColor="#E4E4E4"  
+				paddingTop="3" paddingLeft="3" paddingBottom="3">
+				<mx:VBox   >
+					<mx:Label text="Version: 5"  />
+					<mx:Label text="Name: name"/>
+				</mx:VBox>
+				<mx:VBox>
+					<mx:Label text="Title: title"/>
+					<mx:Label text="Description: descrioption"/>
+				</mx:VBox>
+			</mx:HBox>	
+			
 			<mx:HTML id="html"  width="100%" height="100%" 
 				locationChange="{pageChangedHandler(event)}"/>
 		</mx:VBox>
