--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -174,23 +174,32 @@
 				<mx:Button label="Remove Item" click="{removeItem()}" />				
 			</mx:HBox>
 		</mx:VBox>
-		<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0"  >
-			
-			<mx:HBox color="#000000"  width="100%" backgroundColor="#E4E4E4"  
-				paddingTop="3" paddingLeft="3" paddingBottom="3">
-				<mx:VBox   >
-					<mx:Label text="Version: 5"  />
-					<mx:Label text="Name: name"/>
+		<mx:TabNavigator width="100%" height="100%">
+			<mx:Canvas width="100%" height="100%"  label="Edit">
+				<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0"  >
+					<mx:HBox width="100%" >
+						<mx:VBox color="#000000"  width="100%" backgroundColor="#E4E4E4"  
+							paddingTop="3" paddingLeft="3" paddingBottom="3">
+							<mx:HBox  >
+								<mx:Label text="Title: title"/>
+								<mx:Label text=" v.5"  />
+								<mx:Label text="Name: name"/>
+							</mx:HBox>
+							<mx:HBox>
+								<mx:Label text="Description: descrioption"/>
+							</mx:HBox>
+						</mx:VBox>	
+						<mx:Button label="..."  bottom="0" />
+				</mx:HBox>
+					<mx:TextArea width="100%" height="100%" />
 				</mx:VBox>
-				<mx:VBox>
-					<mx:Label text="Title: title"/>
-					<mx:Label text="Description: descrioption"/>
-				</mx:VBox>
-			</mx:HBox>	
-			
+			</mx:Canvas >
+			<mx:Canvas width="100%" height="100%" label="Preview">
+				
 			<mx:HTML id="html"  width="100%" height="100%" 
 				locationChange="{pageChangedHandler(event)}"/>
-		</mx:VBox>
+			</mx:Canvas>
+		</mx:TabNavigator>
 	</mx:HDividedBox>
 	<mx:HBox horizontalAlign="right" width="100%">
 		<mx:VBox verticalGap="1" verticalAlign="0">
