add application icon fix
git-svn-id: http://svn.vdombox.ru/flextools/trunk@4427 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/_src/theme/css/actionButtons.css
+++ b/IDE/v.01/_src/theme/css/actionButtons.css
@@ -127,3 +127,15 @@ ActionButton {
 	selectedDownIcon: Embed("tree_s.png");
 	selectedDisabledIcon: Embed("tree_s.png");
 }
+
+.resourceButton {
+	upIcon: Embed("resource.png");
+	overIcon: Embed("resource_s.png");
+	downIcon: Embed("resource_s.png");
+	disabledIcon: Embed("resource_s.png");
+
+	selectedUpIcon: Embed("resource_s.png");
+	selectedOverIcon: Embed("resource_s.png");
+	selectedDownIcon: Embed("resource_s.png");
+	selectedDisabledIcon: Embed("resource_s.png");
+}
