--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -19,6 +19,7 @@
 	</mx:Style>
 	<mx:Script>
 	<![CDATA[
+		import mx.managers.PopUpManager;
 		import mx.collections.XMLListCollection;
 	
 	
@@ -140,6 +141,12 @@
 				}
 			}	
 		}
+		
+		private function productEdit():void
+			{
+				var rbWnd:EditProduct = EditProduct(PopUpManager.createPopUp(this, EditProduct, true));
+//				rbWnd.addEventListener(CloseEvent.CLOSE, closeSettingsHandler);
+			}
 	
 	]]>
 </mx:Script>
@@ -163,27 +170,47 @@
 	<mx:HRule width="100%" strokeColor="0x1a1a1a" shadowColor="0x737373"/>
 	<mx:HRule width="100%" strokeColor="0x1a1a1a" shadowColor="0x4b4c4c"/>
 	<mx:HDividedBox y="60" width="100%" height="100%" horizontalGap="1">
-		<mx:VBox height="100%">
+		<mx:VBox height="100%" minWidth="220" horizontalScrollPolicy="off">
+			<mx:HBox paddingLeft="3" paddingRight="3">
+				<mx:ComboBox  width="100%" dataProvider="{{label:'VDOM Editor'}}"
+					color="#FFFFFF" 	fillColors="#333333" iconColor="0xCCCCCC"
+		    		 textSelectedColor="#FFFFFF" cornerRadius="1" 
+		    		  borderColor="#999999" themeColor="#656565" 
+		    		  textRollOverColor="#FFFFFF" />
+				<mx:Button label="Edit" click="{productEdit()}"
+					color="#FFFFFF" 	fillColors="#333333" 
+		    		 textSelectedColor="#FFFFFF" cornerRadius="1"
+		    		  borderColor="#999999" themeColor="#656565" 
+		    		  textRollOverColor="#FFFFFF"/>
+			</mx:HBox>
 			<mx:Tree id="tree" width="100%" height="100%" color="#000000"  showRoot="false"
 				labelField="@title"  dragEnabled="true" dropEnabled="true" 
 				change="{treeChangeHandler(event)}"  dragMoveEnabled="true" 	
 				folderOpenIcon="@Embed('../assets/open_folder.png')" folderClosedIcon="@Embed('../assets/close_folder.png')" 
 				defaultLeafIcon="@Embed('../assets/page.png')" /> 
-			<mx:HBox>
-				<mx:Button  label="Add Item" click="{addItem()}"/>
-				<mx:Button label="Remove Item" click="{removeItem()}" />				
+			<mx:HBox paddingLeft="3">
+				<mx:Button  label="Add Item" click="{addItem()}"
+				color="#FFFFFF" 	fillColors="#333333" 
+	    		 textSelectedColor="#FFFFFF" cornerRadius="1"
+	    		  borderColor="#999999" themeColor="#656565" 
+	    		  textRollOverColor="#FFFFFF"/>
+				<mx:Button label="Remove Item" click="{removeItem()}" 
+				color="#FFFFFF" 	fillColors="#333333" 
+	    		 textSelectedColor="#FFFFFF" cornerRadius="1"
+	    		  borderColor="#999999" themeColor="#656565" 
+	    		  textRollOverColor="#FFFFFF"/>				
 			</mx:HBox>
 		</mx:VBox>
 		<mx:TabNavigator width="100%" height="100%">
 			<mx:Canvas width="100%" height="100%"  label="Edit">
 				<mx:VBox width="100%" height="100%" verticalGap="0" verticalAlign="0"  >
-					<mx:HBox width="100%" >
-						<mx:VBox color="#000000"  width="100%" backgroundColor="#E4E4E4"  
+					<mx:HBox width="100%" color="#000000" backgroundColor="#E4E4E4"  >
+						<mx:VBox width="100%"  
 							paddingTop="3" paddingLeft="3" paddingBottom="3">
 							<mx:HBox  >
 								<mx:Label text="Title: title"/>
 								<mx:Label text=" v.5"  />
-								<mx:Label text="Name: name"/>
+								<mx:Label text="(name)"/>
 							</mx:HBox>
 							<mx:HBox>
 								<mx:Label text="Description: descrioption"/>
@@ -191,7 +218,7 @@
 						</mx:VBox>	
 						<mx:Button label="..."  bottom="0" />
 				</mx:HBox>
-					<mx:TextArea width="100%" height="100%" />
+					<mx:TextArea width="100%" height="100%" /> 
 				</mx:VBox>
 			</mx:Canvas >
 			<mx:Canvas width="100%" height="100%" label="Preview">
