git-svn-id: http://svn.vdombox.ru/flextools/trunk@4464 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/_src/theme/css/default.css
+++ b/IDE/v.01/_src/theme/css/default.css
@@ -237,3 +237,26 @@ ControlBar {
 ComboBox {
 	cornerRadius: 0;
 }
+
+.popUpWindow
+{
+	headerHeight : 16;
+	borderColor : #000000;
+	
+	titleBarColors : #000000, #000000;
+	titleTextStyleName : popUpWindowText;
+	titleBarButtonPadding : -4;
+	titleAlignment : center;
+	
+	buttonPadding : 0;
+	buttonAlignment : right;
+	minimizeButtonSkin: ClassReference("vdom.skins.TitleBarMinimizeButtonSkin");
+	maximizeButtonSkin: ClassReference("vdom.skins.TitleBarMaximizeButtonSkin");
+	restoreButtonSkin: ClassReference("vdom.skins.TitleBarRestoreButtonSkin");
+	closeButtonSkin: ClassReference("vdom.skins.TitleBarCloseButtonSkin");
+}
+
+.popUpWindowText
+{
+	color : #FFFFFF;
+}
