--- a/IDE/v.01/vdom/controls/resourceBrowser/ResourceBrowser.mxml
+++ b/IDE/v.01/vdom/controls/resourceBrowser/ResourceBrowser.mxml
@@ -3,134 +3,125 @@
 	 Resource Browser component for VDOM Box IDE
 	 Developed by Vadim A. Usoltsev, Tomsk, Russia, 2008
 -->
-<mx:TitleWindow
+<mx:VBox 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*"
 	
-	title="Resource Browser"
-	titleStyleName="resourceBrowserTitle"
-	titleIcon="@Embed(source='/assets/common/resourcebrowser.png')"
-	
-	height="600" width="800"
-	
-	borderAlpha="0.95" borderColor="#636363" 
-	borderThicknessLeft="1"	borderThicknessRight="1"
-	cornerRadius="1" shadowDirection="right"
-	
-	horizontalScrollPolicy="off" verticalScrollPolicy="off"
-	layout="absolute"  showCloseButton="true" 
-	
-	creationComplete="creationCompleteHandler();" 
-	>
-	<mx:Style>
-		.resourceBrowserTitle {
-			color:#FFFFFF;
-			fontWeight:bold;
-		}
-	</mx:Style>
-	
-	<!-- Main Class Scripting File -->
-	<mx:Script source="ResourceBrowser_s.as"/>
-	
-	<mx:VBox 
-		height="100%" horizontalGap="3" paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
-		verticalGap="3" width="100%">
-		<!-- Top Panel -->
-		<mx:HBox 
-			backgroundColor="#e5e5e5" borderStyle="solid" cornerRadius="0" height="30" paddingLeft="5"
-			paddingRight="5" verticalAlign="middle" width="100%">
-			<mx:VRule 
-				height="100%"/>
-			<mx:Label 
-				fontWeight="bold" text="Filter:"/>
-			<mx:ComboBox id="__filterCBx"
-				change="{applyExtensionFilter();}" dataProvider="{filterDataProvider}" width="150"/>
-			<mx:VRule 
-				height="100%"/>
-			<mx:Spacer 
-				width="100%"/>
-			<mx:Button 
-				click="uploadButton_clickHandler();" height="24" icon="@Embed(source='/assets/resourceBrowserIcons/interface/upload.png')"
-				label="Upload File..." width="120"/>
-				
-		</mx:HBox>
-		<!-- End of top panel -->
-		
-		<mx:HBox id="__midArea"
-			height="100%" horizontalGap="2" width="100%">
-			<mx:VBox 
-				height="100%" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0" verticalGap="2"
-				width="200">
-				<mx:HBox 
-					horizontalGap="3" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0"
-					verticalAlign="middle" width="100%">
-					<mx:TextInput id="__nameFilter"
-						backgroundColor="#EEEEEE" borderColor="#999999" borderStyle="solid" change="nameFilter_changeHandler();"
-						click="nameFilter_clickHandler();" color="#666666" fontFamily="Tahoma" fontWeight="bold"
-						text="type a filter here" width="100%"/>
-					<mx:Image id="__spinner"
-						height="18" source="@Embed('/assets/common/spinner.swf')" visible="false" width="18"/>
-				</mx:HBox>
-				<mx:List id="__thumbsList"
-					borderStyle="solid" change="showResource();" height="100%" horizontalScrollPolicy="off"
-					itemRenderer="vdom.controls.resourceBrowser.ListItem" paddingBottom="5" paddingLeft="5"
-					paddingRight="5" paddingTop="5" verticalScrollPolicy="on" width="100%"/>
-			</mx:VBox>
-			<mx:VBox 
-				height="100%" horizontalAlign="center" verticalGap="2" width="100%">
-				<mx:Box id="__previewArea"
-					height="100%" horizontalAlign="center" verticalAlign="middle" width="100%">
-					<resourceBrowser:PreviewContainer id="__preview"
-						height="100" width="100"
-						heightLimit="{__previewArea.height - 15}"
-						widthLimit="{__previewArea.width - 15}"/>
-				</mx:Box>
-				<mx:HBox 
-					horizontalAlign="center" verticalAlign="middle" width="100%">
-					<mx:Box 
-						backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5"
-						paddingRight="5">
-						<mx:Label id="__rName"
-							fontWeight="bold" height="18" maxWidth="350" text="" textAlign="center"/>
-					</mx:Box>
-					<mx:Box 
-						backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5"
-						paddingRight="5">
-						<mx:Label id="__rType"
-							fontWeight="bold" height="18" text=""/>
-					</mx:Box>
-					<mx:Box 
-						backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5"
-						paddingRight="5">
-						<mx:Label id="__iResolution"
-							fontWeight="bold" height="18" text=""/>
-					</mx:Box>
-				</mx:HBox>
+	backgroundColor="#FFFFFF" horizontalGap="3" verticalGap="0"
+	creationComplete="creationCompleteHandler();">
+	<mx:Script 
+		source="ResourceBrowser_s.as"/>
+	<!-- Top Panel -->
+	<mx:HBox 
+		height="30" width="100%"
+		backgroundColor="#858585" borderStyle="solid" cornerRadius="0" paddingLeft="5" paddingRight="5"
+		verticalAlign="middle">
+		<mx:Label 
+			text="Filter:"
+			fontWeight="bold"/>
+		<mx:ComboBox 
+			id="__filterCBx"
+			dataProvider="{filterDataProvider}" width="150"
+			change="applyExtensionFilter();"/>
+		<mx:Spacer 
+			width="100%"/>
+		<mx:Button 
+			label="Refresh" click="refreshButton_clickHandler();"/>
+		<mx:Button 
+			height="24" icon="@Embed(source='/assets/resourceBrowserIcons/interface/upload.png')" label="Upload File..."
+			width="120" click="uploadButton_clickHandler();"/>
+	</mx:HBox>
+	<!-- End of top panel -->
+	<mx:HBox
+		id="__midArea"
+		height="100%" width="100%"
+		horizontalGap="2">
+		<mx:VBox 
+			height="100%" width="200"
+			paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0" verticalGap="0">
+			<mx:HBox
+				width="100%"
+				horizontalGap="3" paddingBottom="3" paddingLeft="5" paddingRight="0" paddingTop="3" verticalAlign="middle">
+				<mx:TextInput 
+					id="__nameFilter"
+					text="type a filter here" width="100%"
+					backgroundColor="#EEEEEE" borderColor="#999999" borderStyle="solid" color="#666666"
+					fontFamily="Tahoma" fontWeight="bold"
+					change="nameFilter_changeHandler();" click="nameFilter_clickHandler();"/>
+				<mx:Image 
+					id="__spinner"
+					height="18" source="@Embed('/assets/common/spinner.swf')" width="18" visible="false"/>
+			</mx:HBox>
+			<mx:List 
+				id="__thumbsList"
+				height="100%" horizontalScrollPolicy="off" verticalScrollPolicy="on" width="100%"
+				borderStyle="solid" paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
+				change="showResource();" itemRenderer="vdom.controls.resourceBrowser.ListItem"/>
+		</mx:VBox>
+		<mx:VBox 
+			height="100%" width="100%"
+			horizontalAlign="center" verticalGap="2">
+			<mx:Box 
+				id="__previewArea"
+				height="100%" width="100%"
+				horizontalAlign="center" verticalAlign="middle">
+				<resourceBrowser:PreviewContainer 
+					id="__preview"
+					height="100" width="100" heightLimit="{__previewArea.height - 15}" widthLimit="{__previewArea.width - 15}"/>
+			</mx:Box>
+			<mx:HBox 
+				width="100%"
+				horizontalAlign="center" verticalAlign="middle">
 				<mx:Box 
-					backgroundColor="#E4E2FD" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
-					<mx:Label id="__rID"
-						fontWeight="bold" height="18" selectable="true" text=""/>
+					backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
+					<mx:Label 
+						id="__rName"
+						height="18" maxWidth="350" text=""
+						fontWeight="bold" textAlign="center"/>
 				</mx:Box>
-			</mx:VBox>
-		</mx:HBox>
-	</mx:VBox>
-	
-	<mx:ControlBar 
-		color="#FFFFFF" height="35" paddingBottom="2" paddingLeft="10" paddingRight="10" paddingTop="2">
+				<mx:Box 
+					backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
+					<mx:Label 
+						id="__rType"
+						height="18" text=""
+						fontWeight="bold"/>
+				</mx:Box>
+				<mx:Box 
+					backgroundColor="#FFF6EA" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
+					<mx:Label 
+						id="__iResolution"
+						height="18" text=""
+						fontWeight="bold"/>
+				</mx:Box>
+			</mx:HBox>
+			<mx:Box 
+				backgroundColor="#E4E2FD" borderStyle="solid" cornerRadius="3" paddingLeft="5" paddingRight="5">
+				<mx:Label 
+					id="__rID"
+					height="18" selectable="true" text=""
+					fontWeight="bold"/>
+			</mx:Box>
+		</mx:VBox>
+	</mx:HBox>
+	<mx:HBox 
+		height="30" width="100%"
+		backgroundColor="#858585" color="#FFFFFF" paddingBottom="2" paddingLeft="10" paddingRight="10"
+		paddingTop="2" verticalAlign="middle">
 		<mx:Label 
 			text="Total Resources:"/>
 		<mx:Label 
-			fontWeight="bold" text="{totalResources}"/>
+			text="{totalResources}"
+			fontWeight="bold"/>
 		<mx:VRule 
 			height="18"/>
 		<mx:Label 
 			text="Filtered:"/>
 		<mx:Label 
-			fontWeight="bold" text="{filteredResources}"/>
+			text="{filteredResources}"
+			fontWeight="bold"/>
 		<mx:Spacer 
 			width="100%"/>
 		<mx:Button 
-			click="doneHandler();" icon="@Embed(source='/assets/resourceBrowserIcons/interface/done.png')"
-			label="Done"/>
-	</mx:ControlBar>
-</mx:TitleWindow>
+			icon="@Embed(source='/assets/resourceBrowserIcons/interface/done.png')" label="Done" click="doneHandler();"/>
+	</mx:HBox>
+</mx:VBox>
