git-svn-id: http://svn.vdombox.ru/flextools/trunk@4478 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/_src/theme/css/default.css
+++ b/IDE/v.01/_src/theme/css/default.css
@@ -26,6 +26,10 @@ global {
 	appIconTransportation: Embed("app-transportation.png");
 }
 
+Container {
+	disabledOverlayAlpha : 0;
+}
+
 WindowedApplication {
 	
 	statusBarBackgroundColor: #000000;
@@ -72,6 +76,12 @@ TabNavigator {
 TextInput {
 	fontFamily: "Tahoma";
 	color: "red"
+}
+
+Tree
+{
+	disclosureClosedIcon: Embed(source="vdomTheme.swf",symbol="Tree_disclosureClosedIcon");
+	disclosureOpenIcon: Embed(source="vdomTheme.swf",symbol="Tree_disclosureOpenIcon");
 }
 
 .tabStyle {
