--- a/IDE/v.01/vdom/components/edit/containers/ObjectsPanel.mxml
+++ b/IDE/v.01/vdom/components/edit/containers/ObjectsPanel.mxml
@@ -44,7 +44,7 @@ xmlns:containers="vdom.components.edit.containers.*"
 		private function getIcon(value:Object):Class {
 			
 			var xmlData:XML = XML(value);
-			var data:Object = {typeId:xmlData.@Type, resourceId:xmlData.@resourceID}
+			var data:Object = {typeId:xmlData.@Type.toString(), resourceId:xmlData.@resourceID.toString()}
 		 	
 	 		return IconUtils.getClass(tree, data, 16, 16);
 		}
