--- a/IDE/v.01/vdom/core/vdomTitleBar/VdomTitleBar.mxml
+++ b/IDE/v.01/vdom/core/vdomTitleBar/VdomTitleBar.mxml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas
-	xmlns:mx="http://www.adobe.com/2006/mxml"
-	
-	creationComplete="creationCompleteHandler();"
-	
-	doubleClickEnabled="true"
-	height="50">
-	
+<mx:Canvas 
+	xmlns:mx="http://www.adobe.com/2006/mxml" doubleClickEnabled="true" height="50"
+	creationComplete="creationCompleteHandler();">
 	<mx:Metadata>
 		[Event(name="logout", type="flash.events.Event")]
 	</mx:Metadata>
-	
 	<mx:Style>
 		.invBtn {
 			color: #FF0000;
@@ -21,7 +15,6 @@
 			cornerRadius: 0;
 		}
 	</mx:Style>
-	
 	<mx:Script>
 		<![CDATA[
 			import vdom.managers.DataManager;
@@ -29,135 +22,148 @@
 			import mx.core.WindowedApplication;
 			import mx.core.Application;
 			import mx.core.IWindow;
-			
-			private var dataManager:DataManager = DataManager.getInstance();
-			
-			private function creationCompleteHandler():void
-			{	
-				addEventListener(MouseEvent.MOUSE_DOWN, mouseDownHandler);
-				addEventListener(MouseEvent.DOUBLE_CLICK, doubleClickHandler);
-				
-				minimizeButton.setStyle('skin', getStyle('minimizeButtonSkin'));
+
+			private var dataManager : DataManager = DataManager.getInstance();
+
+			private function creationCompleteHandler() : void
+			{
+				addEventListener( MouseEvent.MOUSE_DOWN, mouseDownHandler );
+				addEventListener( MouseEvent.DOUBLE_CLICK, doubleClickHandler );
+
+				minimizeButton.setStyle( 'skin', getStyle( 'minimizeButtonSkin' ) );
 				minimizeButton.focusEnabled = false;
-	            minimizeButton.enabled = window.minimizable;
-				minimizeButton.addEventListener(MouseEvent.MOUSE_DOWN,
-												button_mouseDownHandler);
-				minimizeButton.addEventListener(MouseEvent.CLICK,
-												minimizeButton_clickHandler);
-				
-				
-				maximizeButton.setStyle('skin', getStyle('maximizeButtonSkin'));
+				minimizeButton.enabled = window.minimizable;
+				minimizeButton.addEventListener( MouseEvent.MOUSE_DOWN, button_mouseDownHandler );
+				minimizeButton.addEventListener( MouseEvent.CLICK, minimizeButton_clickHandler );
+
+
+				maximizeButton.setStyle( 'skin', getStyle( 'maximizeButtonSkin' ) );
 				maximizeButton.focusEnabled = false;
-		        maximizeButton.enabled = window.maximizable;
-				maximizeButton.addEventListener(MouseEvent.MOUSE_DOWN,
-												button_mouseDownHandler);
-				maximizeButton.addEventListener(MouseEvent.CLICK,
-												maximizeButton_clickHandler);
-				
-				
-				closeButton.setStyle('skin', getStyle('closeButtonSkin'));
+				maximizeButton.enabled = window.maximizable;
+				maximizeButton.addEventListener( MouseEvent.MOUSE_DOWN, button_mouseDownHandler );
+				maximizeButton.addEventListener( MouseEvent.CLICK, maximizeButton_clickHandler );
+
+
+				closeButton.setStyle( 'skin', getStyle( 'closeButtonSkin' ) );
 				closeButton.focusEnabled = false;
-				closeButton.addEventListener(MouseEvent.MOUSE_DOWN,
-											 button_mouseDownHandler);
-				closeButton.addEventListener(MouseEvent.CLICK,
-											 closeButton_clickHandler);
+				closeButton.addEventListener( MouseEvent.MOUSE_DOWN, button_mouseDownHandler );
+				closeButton.addEventListener( MouseEvent.CLICK, closeButton_clickHandler );
 			}
-			
-			private function get window():IWindow
+
+			private function get window() : IWindow
 			{
-				return IWindow(Application.application);
+				return IWindow( Application.application );
 			}
-			
-			private static function isMac():Boolean
+
+			private static function isMac() : Boolean
 			{
-				return Capabilities.os.substring(0, 3) == "Mac";
+				return Capabilities.os.substring( 0, 3 ) == "Mac";
 			}
-			
-			override protected function updateDisplayList(unscaledWidth:Number,
-												  unscaledHeight:Number):void
+
+			override protected function updateDisplayList( unscaledWidth : Number,
+														   unscaledHeight : Number ) : void
 			{
-				super.updateDisplayList(unscaledWidth, unscaledHeight);
-				
-				if (!isMac()) {
-					
-					if (window.nativeWindow.displayState == NativeWindowDisplayState.MAXIMIZED) {
-						
-						if (getStyle('restoreButtonSkin'))
-							maximizeButton.setStyle("skin", getStyle('restoreButtonSkin'));
-					
-					} else
-						maximizeButton.setStyle("skin", getStyle('maximizeButtonSkin'));
-				}						  	
+				super.updateDisplayList( unscaledWidth, unscaledHeight );
+
+				if ( !isMac() )
+				{
+
+					if ( window.nativeWindow.displayState == NativeWindowDisplayState.MAXIMIZED )
+					{
+
+						if ( getStyle( 'restoreButtonSkin' ) )
+							maximizeButton.setStyle( "skin", getStyle( 'restoreButtonSkin' ) );
+
+					}
+					else
+						maximizeButton.setStyle( "skin", getStyle( 'maximizeButtonSkin' ) );
+				}
 			}
-			
-			private function minimizeButton_clickHandler(event:Event):void
+
+			private function minimizeButton_clickHandler( event : Event ) : void
 			{
 				window.minimize();
 			}
-			
-			private function maximizeButton_clickHandler(event:Event):void
+
+			private function maximizeButton_clickHandler( event : Event ) : void
 			{
-				if (window.nativeWindow.displayState == NativeWindowDisplayState.MAXIMIZED)
+				if ( window.nativeWindow.displayState == NativeWindowDisplayState.MAXIMIZED )
 					window.restore();
-				
-				else {
+
+				else
+				{
 					window.maximize();
 					// work around bug  Bug SDK-9547
-					maximizeButton.dispatchEvent(new MouseEvent(MouseEvent.ROLL_OUT));
+					maximizeButton.dispatchEvent( new MouseEvent( MouseEvent.ROLL_OUT ) );
 				}
 			}
-			
-			private function closeButton_clickHandler(event:Event):void
+
+			private function closeButton_clickHandler( event : Event ) : void
 			{
 				window.close();
 			}
-			
-			private function mouseDownHandler(event:MouseEvent):void
+
+			private function mouseDownHandler( event : MouseEvent ) : void
 			{
+				if( event.target == logoffButton )
+					return;
 				window.nativeWindow.startMove();
-				
+
 				event.stopPropagation();
 			}
-			
-			private function doubleClickHandler(event:MouseEvent):void
+
+			private function doubleClickHandler( event : MouseEvent ) : void
 			{
-				if (isMac())
+				if ( isMac() )
 					window.minimize();
-					
-				else {
-					
-					if (window.nativeWindow.displayState ==
-						NativeWindowDisplayState.MAXIMIZED)
-							
-			    			window.restore();
-			    	
-			    	else
-			    		window.maximize();
-				
+
+				else
+				{
+
+					if ( window.nativeWindow.displayState == NativeWindowDisplayState.MAXIMIZED )
+
+						window.restore();
+
+					else
+						window.maximize();
+
 				}
 			}
-			
-			private function button_mouseDownHandler(event:MouseEvent):void
+
+			private function button_mouseDownHandler( event : MouseEvent ) : void
 			{
-				
+
 				event.stopPropagation();
 			}
-			
-			private function logout():void
+
+			private function logout() : void
 			{
 //				dataManager.close();
-				dispatchEvent(new Event("logout"));
+				dispatchEvent( new Event( "logout" ) );
 			}
 		]]>
 	</mx:Script>
-	<mx:Button id="minimizeButton" y="1" width="21" height="16" right="45"/>
-	<mx:Button id="maximizeButton" y="1" width="21" height="16" right="24"/>
-	<mx:Button id="closeButton" y="1" width="24" height="16" right="1"/>
-	<mx:Button visible="false" y="1" width="24" height="16" right="69" cornerRadius="0" fillAlphas="[1.0, 1.0]" fillColors="[#FF0000, #FF0000]"/>
-	<mx:Label text="{ resourceManager.getString( 'Application','logout' ) }"
-		right="10" top="24" fontWeight="bold" color="#FFFFFF" buttonMode="true" useHandCursor="true" enabled="true"
-		click="logout();" />
-	<!--<mx:Button 
-		label="{resourceManager.getString('Application','logout')}" 
-		right="10" top="22" styleName="invBtn" />-->
+	<mx:Button 
+		id="minimizeButton"
+		height="16" width="21" y="1"
+		right="45"/>
+	<mx:Button 
+		id="maximizeButton"
+		height="16" width="21" y="1"
+		right="24"/>
+	<mx:Button 
+		id="closeButton"
+		height="16" width="24" y="1"
+		right="1"/>
+	<mx:Button height="16" width="24" y="1"
+		cornerRadius="0" fillAlphas="[1.0, 1.0]" fillColors="[#FF0000, #FF0000]"
+		right="69"
+		visible="false"/>
+	<mx:LinkButton id="logoffButton" label="{ resourceManager.getString( 'Application','logout' ) }"
+		color="#FFFFFF" fontWeight="bold" right="10" rollOverColor="#333333" selectionColor="#333333"
+		textRollOverColor="#FFFFFF" textSelectedColor="#FFFFFF" top="24"
+		click="logout();"/>
+	<!--<mx:Button
+		 label="{resourceManager.getString('Application','logout')}"
+		 right="10" top="22" styleName="invBtn" />-->
 </mx:Canvas>
