--- a/IDE/v.01/vdom/components/edit/containers/XMLPresentationClasses/XMLScriptEditor.mxml
+++ b/IDE/v.01/vdom/components/edit/containers/XMLPresentationClasses/XMLScriptEditor.mxml
@@ -40,6 +40,7 @@
 				<style type="text/css">
 					body {
 						margin-top:2px;
+						font-size:11px;
 						background:white;
 						margin-left:5px;
 						white-space:pre;
