--- a/Help/Editor/v.01/src/EditProduct.mxml
+++ b/Help/Editor/v.01/src/EditProduct.mxml
@@ -2,8 +2,8 @@
 
 <mx:TitleWindow 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	layout="absolute" width="400" height="270"
-	title="Add"
+	layout="absolute" width="400" height="300"
+	title="Edit"
 	creationComplete="creationComplete()"
 	showCloseButton="true"
 	verticalScrollPolicy="off" horizontalScrollPolicy="off" 
@@ -69,7 +69,7 @@
 		
 	</mx:Script>
 	<mx:HBox width="100%" height="100%">
-		<mx:VBox label="Add Product" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10">
+		<mx:VBox label="Products" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10">
 			<mx:Label text="Product:"  fontSize="20"/>
 			<mx:Canvas width="100%" height="100%" >
 				
@@ -79,8 +79,11 @@
 				<mx:Label x="18" y="42" text="Name:"/>
 				<mx:TextInput x="65" y="40" text="Like 'VDOM_IDE'" width="211"/>
 				
-				<mx:Label x="10" y="74" text="Description:"/>
-				<mx:TextArea x="18" y="100" width="258" height="87"/>
+				<mx:Label x="10" y="69" text="Version:"/>
+				<mx:TextInput x="65" y="69" text="12" width="211"/>
+				
+				<mx:Label x="10" y="99" text="Description:"/>
+				<mx:TextArea x="18" y="125" width="258" height="87"/>
 			</mx:Canvas>
 		</mx:VBox>
 	<mx:VBox horizontalAlign="center"   backgroundColor="#373739"
@@ -89,6 +92,10 @@
     		  <mx:Button  label="Ok"  click="{cancelPressed()}"
     		  	color="#FFFFFF"  width="100%"  borderColor="#999999"
 				fillColors="#333333"  textSelectedColor="#FFFFFF" cornerRadius="1" themeColor="#656565" textRollOverColor="#FFFFFF"/>
+			
+			<mx:Button  label="Undo"  click="{editClickHandler()}"
+				color="#FFFFFF"  width="100%" borderColor="#999999"
+				fillColors="#333333"  textSelectedColor="#FFFFFF" cornerRadius="1"  themeColor="#656565" textRollOverColor="#FFFFFF"/>
 			
 			<mx:Button  label="Cancel" 
 				click="{cancelPressed()}" color="#FFFFFF" width="100%" borderColor="#999999"
